--- a/akshara/varna.yml
+++ b/akshara/varna.yml
@@ -2,71 +2,85 @@
         - भेदः: स्वरः
         - उच्चारणस्थानम्: कण्ठः
         - आभ्यन्तरप्रयत्नः: संवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 आ:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: कण्ठः
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 अ३:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: कण्ठः
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 इ:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ई:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 इ३:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 उ:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: ओष्ठौ
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ऊ:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: ओष्ठौ
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 उ३:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: ओष्ठौ
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ऋ:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ॠ:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ऋ३:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ऌ:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: दन्ताः
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ऌ३:
         - भेदः: स्वरः
         - उच्चारणस्थानम्: दन्ताः
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ए:
         - भेदः: स्वरः
@@ -74,6 +88,7 @@
                 - कण्ठः
                 - तालुः
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ए३:
         - भेदः: स्वरः
@@ -81,6 +96,7 @@
                 - कण्ठः
                 - तालुः
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ऐ:
         - भेदः: स्वरः
@@ -88,6 +104,7 @@
                 - कण्ठः
                 - तालुः
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ऐ३:
         - भेदः: स्वरः
@@ -95,6 +112,7 @@
                 - कण्ठः
                 - तालुः
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ओ:
         - भेदः: स्वरः
@@ -102,6 +120,7 @@
                 - कण्ठः
                 - ओष्ठौ
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 ओ३:
         - भेदः: स्वरः
@@ -109,6 +128,7 @@
                 - कण्ठः
                 - ओष्ठौ
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 औ:
         - भेदः: स्वरः
@@ -116,6 +136,7 @@
                 - कण्ठः
                 - ओष्ठौ
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 औ३:
         - भेदः: स्वरः
@@ -123,224 +144,294 @@
                 - कण्ठः
                 - ओष्ठौ
         - आभ्यन्तरप्रयत्नः: विवृतम्
+        - बाह्यप्रयत्नः: उदात्तः
 
 क्:
         - भेदः: व्यञ्जनम्
         - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: कण्ठः
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - अल्पप्राणः
 
 ख्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: कण्ठः
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - महाप्राणः
         
 ग्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: कण्ठः
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 घ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: कण्ठः
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - महाप्राणः
 
 ङ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्:
                 - कण्ठः
                 - नासिका
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 च्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - अल्पप्राणः
 
 छ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - महाप्राणः
 
 ज्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 झ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - महाप्राणः
 
 ञ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्:
                 - तालु
                 - नासिका
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 ट्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - अल्पप्राणः
 
 ठ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - महाप्राणः
 
 ड्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 ढ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - महाप्राणः
 
 ण्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्:
                 - मूर्धा
                 - नासिका
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 त्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: दन्ताः
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - अल्पप्राणः
 
 थ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: दन्ताः
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - महाप्राणः
 
 द्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: दन्ताः
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 ध्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: दन्ताः
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - महाप्राणः
 
 न्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्:
                 - दन्ताः
                 - नासिका
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 प्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: ओष्ठौ
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - अल्पप्राणः
 
 फ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: ओष्ठौ
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - महाप्राणः
 
 ब्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: ओष्ठौ
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 भ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्: ओष्ठौ
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - महाप्राणः
 
 म्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: वर्गीयः
         - उच्चारणस्थानम्:
                 - ओष्ठौ
                 - नासिका
         - आभ्यन्तरप्रयत्नः: स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 य्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: अन्तस्थः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: ईषत्स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 र्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: अन्तस्थः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: ईषत्स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 ल्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: अन्तस्थः
         - उच्चारणस्थानम्: दन्ताः
         - आभ्यन्तरप्रयत्नः: ईषत्स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 व्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: अन्तस्थः
         - उच्चारणस्थानम्:
                 - दन्ताः
                 - ओष्ठौ
         - आभ्यन्तरप्रयत्नः: ईषत्स्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 श्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: ऊष्माणः
         - उच्चारणस्थानम्: तालु
         - आभ्यन्तरप्रयत्नः: ईषद्विवृतः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - महाप्राणः
 
 ष्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: ऊष्माणः
         - उच्चारणस्थानम्: मूर्धा
         - आभ्यन्तरप्रयत्नः: ईषद्विवृतः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - महाप्राणः
 
 स्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: ऊष्माणः
         - उच्चारणस्थानम्: दन्ताः
         - आभ्यन्तरप्रयत्नः: ईषद्विवृतः
+        - बाह्यप्रयत्नः:
+                - कर्कशः
+                - महाप्राणः
 
 ह्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: ऊष्माणः
         - उच्चारणस्थानम्: कण्ठः
         - आभ्यन्तरप्रयत्नः: ईषद्विवृतः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - महाप्राणः
 
 ळ्:
         - भेदः: व्यञ्जनम्
-        - प्रभेदः: दुःस्पृष्टः
         - उच्चारणस्थानम्:
                 - दन्ताः
                 - मूर्धा
         - आभ्यन्तरप्रयत्नः: दुःस्पृष्टः
+        - बाह्यप्रयत्नः:
+                - मृदुः
+                - अल्पप्राणः
 
 ं:
         - भेदः: अयोगवाहः
