Made labels uniform

--- a/akshara/varna.yml
+++ b/akshara/varna.yml
@@ -1,98 +1,98 @@
 अ:
         भेदः: स्वरः
         उच्चारणस्थानम्: कण्ठः
-        आभ्यन्तरप्रयत्नः: संवृतम्
+        आभ्यन्तरप्रयत्नः: संवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: ह्रस्वः
 
 आ:
         भेदः: स्वरः
         उच्चारणस्थानम्: कण्ठः
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: दीर्घः
 
 अ३:
         भेदः: स्वरः
         उच्चारणस्थानम्: कण्ठः
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
 इ:
         भेदः: स्वरः
         उच्चारणस्थानम्: तालु
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: ह्रस्वः
 
 ई:
         भेदः: स्वरः
         उच्चारणस्थानम्: तालु
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: दीर्घः
 
 इ३:
         भेदः: स्वरः
         उच्चारणस्थानम्: तालु
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
 उ:
         भेदः: स्वरः
         उच्चारणस्थानम्: ओष्ठौ
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: ह्रस्वः
 
 ऊ:
         भेदः: स्वरः
         उच्चारणस्थानम्: ओष्ठौ
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: दीर्घः
 
 उ३:
         भेदः: स्वरः
         उच्चारणस्थानम्: ओष्ठौ
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
 ऋ:
         भेदः: स्वरः
         उच्चारणस्थानम्: मूर्धा
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: ह्रस्वः
 
 ॠ:
         भेदः: स्वरः
         उच्चारणस्थानम्: मूर्धा
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: दीर्घः
 
 ऋ३:
         भेदः: स्वरः
         उच्चारणस्थानम्: मूर्धा
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
 ऌ:
         भेदः: स्वरः
         उच्चारणस्थानम्: दन्ताः
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: ह्रस्वः
 
 ऌ३:
         भेदः: स्वरः
         उच्चारणस्थानम्: दन्ताः
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
@@ -101,7 +101,7 @@
         उच्चारणस्थानम्:
                 - कण्ठः
                 - तालुः
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: दीर्घः
 
@@ -110,7 +110,7 @@
         उच्चारणस्थानम्:
                 - कण्ठः
                 - तालुः
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
@@ -119,7 +119,7 @@
         उच्चारणस्थानम्:
                 - कण्ठः
                 - तालुः
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: दीर्घः
 
@@ -128,7 +128,7 @@
         उच्चारणस्थानम्:
                 - कण्ठः
                 - तालुः
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
@@ -137,7 +137,7 @@
         उच्चारणस्थानम्:
                 - कण्ठः
                 - ओष्ठौ
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: दीर्घः
 
@@ -146,7 +146,7 @@
         उच्चारणस्थानम्:
                 - कण्ठः
                 - ओष्ठौ
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
@@ -155,7 +155,7 @@
         उच्चारणस्थानम्:
                 - कण्ठः
                 - ओष्ठौ
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: दीर्घः
 
@@ -164,7 +164,7 @@
         उच्चारणस्थानम्:
                 - कण्ठः
                 - ओष्ठौ
-        आभ्यन्तरप्रयत्नः: विवृतम्
+        आभ्यन्तरप्रयत्नः: विवृतः
         बाह्यप्रयत्नः: उदात्तः
         कालः: प्लुतः
 
