--- a/.pylintrc
+++ b/.pylintrc
@@ -428,7 +428,8 @@ disable=raw-checker-failed,
         useless-suppression,
         deprecated-pragma,
         use-symbolic-message-instead,
-        too-many-instance-attributes
+        too-many-instance-attributes,
+        unrecognized-option
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
