Added option for anunaasika vyanjana

--- a/tests/sample_texts.yml
+++ b/tests/sample_texts.yml
@@ -4,3 +4,5 @@ vinyaasa:
         लक्ष्मीः: ल्,अ,क्,ष्,म्,ई,ः
         संस्कृतम्: स्,अ,ं,स्,क्,ऋ,त्,अ,म्
         पठँ: प्,अ,ठ्,अँ
+        चल्ँनमति: च्,अ,ल्ँ,न्,अ,म्,अ,त्,इ
+
