--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ h11==0.14.0
 idna==3.6
 pydantic==2.5.3
 pydantic_core==2.14.6
-PyYAML==6.0
+PyYAML>=6.0.2
 sniffio==1.3.0
 starlette==0.35.1
 typing_extensions==4.9.0
